...
    SearchBar(
        query = query,
        onQueryChange = onQueryChange,
        onSearch = { active = false },
        active = active,
        onActiveChange = { active = it },
        placeholder = { Text("Search buildings or addresses...") },
        leadingIcon = { Icon(Icons.Default.Search, contentDescription = null) },
        modifier = modifier.fillMaxWidth().padding(16.dp),
        colors = SearchBarDefaults.colors(containerColor = Color.White)
    ) {
        LazyColumn(modifier = Modifier.fillMaxWidth()) {
            items(results) { result ->
                val title = when(result) {
                    is SearchResult.BuildingResult -> result.building.name
                    is SearchResult.CampusResult -> result.campus.name
                    is SearchResult.GoogleResult -> result.title
                    is SearchResult.CurrentLocation -> "Your position"
                    is SearchResult.Home -> "Home"
                    is SearchResult.IndoorRoomResult -> result.label
                }

                val icon = when(result) {
                    is SearchResult.BuildingResult -> Icons.Default.Business
...
