
# US-1.3: As a Student, when I am looking at the outdoor campus map, I want that all the campus buildings have distinct shapes so that I can easily distinguish them from the city buildings.
# US-1.4: As a campus map user, I want to easily switch between SGW and Loyola campuses, so that I can quickly navigate between them.
#
# This test covers both user stories 1.3 and 1.4. Implementing an e2e test for US-1.4 would be redundant since it
# is tested through US-1.3 e2e test.

appId: com.example.myapplication
---
# Set user location out of campus (Starbucks, Brossard)
- setLocation:
    latitude: 45.4377
    longitude: -73.47379
- launchApp:
    clearState: true
- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    point: "80%, 83%"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    text: "SGW"
- waitForAnimationToEnd:
    timeout: 5000

- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    text: "LOY"
- waitForAnimationToEnd:
    timeout: 5000

- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    text: "SGW"
- waitForAnimationToEnd:
    timeout: 5000

- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    point: "80%, 83%"
- waitForAnimationToEnd:
    timeout: 5000
