
# US-1.5: As a campus map user, I want the map to show the building I am currently located in, so that I know my current position on campus.
#
# We cannot test the color of buildings directly but we can make sure the application does not crash when a users
# location is a campus building.

appId: com.example.myapplication
---
- setLocation:
    latitude: 45.4377
    longitude: -73.47379
- launchApp:
    clearState: true
- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    point: "80%, 83%"
- waitForAnimationToEnd:
    timeout: 5000

# Give time to the application to load the new location
- tapOn:
    text: "SGW"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    point: "80%, 83%"
- waitForAnimationToEnd:
    timeout: 5000

# Assert that the app does not crash when out of campus
- setLocation:
    latitude: 45.4972
    longitude: -73.5789

# Give time to the application to load the new location
- waitForAnimationToEnd:
    timeout: 10000

- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    point: "80%, 83%"
- waitForAnimationToEnd:
    timeout: 5000
