
# US-2.2: As a campus map user, I want my current building to be used as the starting point, so that I don’t have to manually select it.

appId: com.example.myapplication
---
- launchApp:
    clearState: true
- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    point: "80%, 83%"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    text: "Search buildings or addresses..."
- waitForAnimationToEnd:
    timeout: 2000

- inputText: "Vanier"
- tapOn:
    text: "Vanier Library"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "Directions"
- waitForAnimationToEnd:
    timeout: 5000

- assertVisible:
    text: "Directions"
- assertVisible:
    text: "X"
- assertVisible:
    text: "Your position"
- assertVisible:
    text: "Vanier Library"

## Set location outside of campus
#- setLocation:
#    latitude: 45.4377
#    longitude: -73.47379
## Scenario 1: Tap on a building for directions
#- launchApp:
#    clearState: true
#- assertVisible:
#    id: "search_bar"
#- assertVisible:
#    id: "campus_map"
#- assertVisible:
#    id: "campus_toggle"
#- assertVisible:
#    id: "LOY_button"
#- assertVisible:
#    id: "SGW_button"
#- assertVisible: "RECENTER"
#- assertVisible:
#    id: "app_nav"
#- assertVisible:
#    id: "map_option"
#- assertVisible:
#    id: "schedule_option"
#
#- waitForAnimationToEnd:
#    timeout: 5000
#
#- tapOn:
#    id: "SGW_button"
#- waitForAnimationToEnd:
#    timeout: 5000
#
## Tap on Hall building
#- tapOn:
#    point: "50%, 47%"
#- waitForAnimationToEnd:
#    timeout: 5000
#
#- assertVisible:
#    id: "building_info_popup"
#
#- tapOn:
#    id: "directions_option"
#- waitForAnimationToEnd:
#    timeout: 5000
#
#- assertVisible:
#    id: "directions_info_popup"
#
#- assertVisible:
#    id: "directions_start_field"
#
#- assertVisible:
#    id: "directions_dest_field"
#
#- assertNotVisible:
#    text: "Starting point"
#
## Scenario 2: Search for a building and get directions
#- launchApp:
#    clearState: true
#- assertVisible:
#    id: "search_bar"
#- assertVisible:
#    id: "campus_map"
#- assertVisible:
#    id: "campus_toggle"
#- assertVisible:
#    id: "LOY_button"
#- assertVisible:
#    id: "SGW_button"
#- assertVisible: "RECENTER"
#- assertVisible:
#    id: "app_nav"
#- assertVisible:
#    id: "map_option"
#- assertVisible:
#    id: "schedule_option"
#
#- waitForAnimationToEnd:
#    timeout: 5000
#
#- tapOn:
#    id: "search_bar"
#- inputText: "Vanier"
#- waitForAnimationToEnd:
#    timeout: 2000
#
#- tapOn:
#    text: "Vanier Library"
#- waitForAnimationToEnd:
#    timeout: 2000
#
#- assertVisible:
#    id: "building_info_popup"
#
#- tapOn:
#    id: "directions_option"
#- waitForAnimationToEnd:
#    timeout: 5000
#
#- assertVisible:
#    id: "directions_info_popup"
#
#- assertVisible:
#    id: "directions_start_field"
#
#- assertVisible:
#    id: "directions_dest_field"
#
#- assertNotVisible:
#    text: "Starting point"