
# US-3.1: As a student, I want to connect my Google Calendar, so that the app can automatically find my next class location and show me how to get there.
# US-3.2: As a student with multiple Google calendars, I want to select specific calendars as the data source for my classes so that my navigation is only based on my academic schedule and not my personal events.

appId: com.example.myapplication
---
- launchApp:
    clearState: true
- assertVisible:
    text: "Search buildings or addresses..."
- assertVisible:
    text: "SGW"
- assertVisible:
    text: "LOY"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn:
    text: "schedule"
- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    text: "Connect"
    index: 1
- waitForAnimationToEnd:
    timeout: 10000

- waitForAnimationToEnd:
    timeout: 5000

- tapOn: "concoordinates@gmail.com"

- assertVisible:
    text: "Choose a Calendar"
- assertVisible:
    text: "Map"
- assertVisible:
    text: "Schedule"

- tapOn: "concoordinates@gmail.com"
- assertVisible:
    text: "Schedule"
    index: 0
- assertVisible:
    text: "Schedule"
    index: 1